# job-monitor-mcp

./: .gitignore  README.md  pyproject.toml
src/job_monitor/: __init__.py  monitor.py  runners.py  server.py  store.py  types.py
tests/: test_smoke.py
