[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-monitor-mcp"
version = "0.1.0"
description = "MCP server for submitting, monitoring, and getting notified when compute jobs finish."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.20",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
job-monitor = "job_monitor.server:main"

[tool.setuptools.packages.find]
where = ["src"]
